--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Design.Light.NoActionBar">
-        <activity android:name=".MainActivity">
+        <activity android:name=".SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".RegisterActivity" />
+        <activity android:name=".MainActivity" >
+            <meta-data android:name="android.app.searchable"
+                android:resource="@xml/searchable"
+                />
+        </activity>
+
+        <activity android:name=".RegisterActivity"
+            android:theme="@style/Theme.AppCompat.Light"
+            android:label="Register"/>
         <activity
-            android:name=".SplashScreenActivity"
+            android:name=".LoginActivity"
             android:label="Home" />
         <activity android:name=".BookDetailActivity" />
         <activity android:name=".ListBooksActivity"
